--- a/GeekShopping/GeekShopping.Web/Views/Shared/_Layout.cshtml
+++ b/GeekShopping/GeekShopping.Web/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/GeekShopping.Web.styles.css" asp-append-version="true" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-3vAv2s5Rb+X+yR700C4t003v+k7y76b+k221q+4F9k+m/aX+qLsJb9f8943123m24r6hL1m28+b7/kRs6k+oQ==" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/7e90f7fb30.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="ProductIndex">Product</a>
                         </li>
                     </ul>
                 </div>
