adicionando tela de update e delete

--- a/GeekShopping/GeekShopping.Web/Views/Product/ProductIndex.cshtml
+++ b/GeekShopping/GeekShopping.Web/Views/Product/ProductIndex.cshtml
@@ -41,7 +41,7 @@
                         @((item.Price).ToString("c"))
                     </td>
                     <td>
-                        <a asp-action="ProductEdit" class="btn-success" asp-route-id="@item.Id">
+                        <a asp-action="ProductUpdate" class="btn-success" asp-route-id="@item.Id">
                             <i class="fa-solid fa-pen-to-square ms-2"></i>
                         </a>
                     </td>
